--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -9547,6 +9547,9 @@ msgstr ""
 msgid "Choose file…"
 msgstr ""
 
+msgid "Choose protected branch"
+msgstr ""
+
 msgid "Choose the top-level group for your repository imports."
 msgstr ""
 
@@ -9850,6 +9853,9 @@ msgstr[0] ""
 msgstr[1] ""
 
 msgid "Clear All"
+msgstr ""
+
+msgid "Clear all"
 msgstr ""
 
 msgid "Clear all repository checks"
@@ -41856,6 +41862,12 @@ msgstr ""
 msgid "Select projects"
 msgstr ""
 
+msgid "Select protected branch"
+msgstr ""
+
+msgid "Select protected branches"
+msgstr ""
+
 msgid "Select report"
 msgstr ""
 
@@ -43583,6 +43595,9 @@ msgid "Spam log successfully submitted as ham."
 msgstr ""
 
 msgid "Specific branches"
+msgstr ""
+
+msgid "Specific protected branches"
 msgstr ""
 
 msgid "Specified URL cannot be used: \"%{reason}\""
