User Profile - Convert Snippets to Vue
This change aims to convert the User
Profile Snippets tab to Vue.

The goal here is to try and keep the
UI as similar as possible to the current
implementation.

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -48950,6 +48950,12 @@ msgstr ""
 msgid "UserProfiles|No snippets found."
 msgstr ""
 
+msgid "UserProfile|%{count} %{file}"
+msgstr ""
+
+msgid "UserProfile|%{id} · created %{created} by %{author}"
+msgstr ""
+
 msgid "UserProfile|Activity"
 msgstr ""
 
@@ -49086,6 +49092,9 @@ msgid "UserProfile|at"
 msgstr ""
 
 msgid "UserProfile|made a private contribution"
+msgstr ""
+
+msgid "UserProfile|updated %{updated}"
 msgstr ""
 
 msgid "Username"
