Update the JiraCoonect app error message
It changes the current JiraConnectApp error message to be more user
friendly. Additionally, it adds a link to the relevant
Troubleshooting page.

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -24282,7 +24282,7 @@ msgstr ""
 msgid "Integrations|Failed to unlink namespace. Please try again."
 msgstr ""
 
-msgid "Integrations|Failed to update GitLab version. Please try again."
+msgid "Integrations|Failed to update the GitLab instance. See the %{linkStart}troubleshooting documentation%{linkEnd}."
 msgstr ""
 
 msgid "Integrations|GitLab administrators can set up integrations that all groups and projects inherit and use by default. These integrations apply to all groups and projects that don't already use custom settings. You can override custom settings for a group or project if the settings are necessary at that level. Learn more about %{integrations_link_start}instance-level integration management%{link_end}."
