Revises expired-sub message to mention read-only
We're not clear in our messaging what's happening here. We need to
tell users that until they delete their expired license, the instance
is locked and read-only.

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -33709,9 +33709,6 @@ msgstr ""
 msgid "Please create an index before enabling indexing"
 msgstr ""
 
-msgid "Please delete your current license if you want to downgrade to the free plan."
-msgstr ""
-
 msgid "Please enable and migrate to hashed storage to avoid security issues and ensure data integrity. %{migrate_link}"
 msgstr ""
 
@@ -46251,6 +46248,9 @@ msgid "This group, its subgroups and projects will be removed on %{date} since i
 msgstr ""
 
 msgid "This incident is already escalated with '%{escalation_policy_name}'."
+msgstr ""
+
+msgid "This instance is now read-only. Don't worry, your data is safe. To change to GitLab Free and restore write access to this instance, delete your expired license."
 msgstr ""
 
 msgid "This invitation was sent to %{mail_to_invite_email}, but you are signed in as %{link_to_current_user} with email %{mail_to_current_user}."
