Add link to catalog in pipeline editor
The CTA that takes user to the catalog is an EE
feature and should therefore only be visible in
these instances. This commit adds the EE file structure
that supports dividing the code in the pipeline editor
between CE and EE and adds the correct button and tests.

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -8278,6 +8278,9 @@ msgstr ""
 msgid "BroadcastMessages|Your message here"
 msgstr ""
 
+msgid "Browse CI/CD Catalog"
+msgstr ""
+
 msgid "Browse Directory"
 msgstr ""
 
