Add database index on members
Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -40667,6 +40667,9 @@ msgstr ""
 msgid "SecurityOrchestration|License Scan"
 msgstr ""
 
+msgid "SecurityOrchestration|Logic error"
+msgstr ""
+
 msgid "SecurityOrchestration|New policy"
 msgstr ""
 
@@ -40728,6 +40731,9 @@ msgid "SecurityOrchestration|Policy type"
 msgstr ""
 
 msgid "SecurityOrchestration|Require %{approvals} %{plural} from %{approvers} if any of the following occur:"
+msgstr ""
+
+msgid "SecurityOrchestration|Required approvals exceed eligible approvers"
 msgstr ""
 
 msgid "SecurityOrchestration|Roles"
