--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -51283,6 +51283,9 @@ msgstr ""
 msgid "WorkItem|Child objectives and key results"
 msgstr ""
 
+msgid "WorkItem|Child removal reverted"
+msgstr ""
+
 msgid "WorkItem|Child removed"
 msgstr ""
 
