Update dashboards listing to retrieve dashboards from backend
- Adds a new GraphQL query to get the dashboards
- Updates listing to retrieve from GraphQL when Snowplow is enabled
- Updated dashboards YAMLs and dashboards JSONs to match each other
(slug instead of id, audience instead of dashboard_audience etc)
- Updated listing to hide buttons when using Snowplow as visualization
designer does not work
- Updated specs to check the buttons are hidden
- Updated specs to test with and without Snowplow enabled

Signed-off-by: Robert Hunt <rhunt@gitlab.com>

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -5196,6 +5196,9 @@ msgstr ""
 msgid "Analytics|Browser Family"
 msgstr ""
 
+msgid "Analytics|By GitLab"
+msgstr ""
+
 msgid "Analytics|Cancel"
 msgstr ""
 
