Add delete option to selected approvers
Instead of making users open the approvers dropdown and deselecting
options, it is a lot smoother to have a small trash button next to each
approver row to remove it from the selected options.

Changelog: added
EE: true

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -36659,6 +36659,9 @@ msgstr ""
 msgid "ProtectedEnvironments|Number of approvals must be between 1 and 5"
 msgstr ""
 
+msgid "ProtectedEnvironments|Remove approval rule"
+msgstr ""
+
 msgid "ProtectedEnvironments|Required approval count"
 msgstr ""
 
