Update UI text for LFS setting
Update UI text as per writing style

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -4634,9 +4634,6 @@ msgstr ""
 msgid "Allow projects and subgroups to override the group setting"
 msgstr ""
 
-msgid "Allow projects within this group to use Git LFS"
-msgstr ""
-
 msgid "Allow public access to pipelines and job details, including output logs and artifacts."
 msgstr ""
 
@@ -8719,9 +8716,6 @@ msgid "CampfireService|The %{code_open}.campfirenow.com%{code_close} subdomain."
 msgstr ""
 
 msgid "Can be manually deployed to"
-msgstr ""
-
-msgid "Can be overridden in each project."
 msgstr ""
 
 msgid "Can create groups:"
@@ -34013,6 +34007,9 @@ msgid "Popularity"
 msgstr ""
 
 msgid "Port"
+msgstr ""
+
+msgid "Possible to override in each project."
 msgstr ""
 
 msgid "Postman collection"
