--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -11102,6 +11102,15 @@ msgstr ""
 msgid "Command line instructions"
 msgstr ""
 
+msgid "CommandPalette|Commands"
+msgstr ""
+
+msgid "CommandPalette|Type %{commandHandle} for command or search..."
+msgstr ""
+
+msgid "CommandPalette|command"
+msgstr ""
+
 msgid "Commands applied"
 msgstr ""
 
@@ -12806,6 +12815,9 @@ msgid "Create a new issue"
 msgstr ""
 
 msgid "Create a new project"
+msgstr ""
+
+msgid "Create a new project/repository"
 msgstr ""
 
 msgid "Create a new repository"
