--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -6479,12 +6479,6 @@ msgstr ""
 msgid "AuditStreams|Active"
 msgstr ""
 
-msgid "AuditStreams|Add a custom header"
-msgstr ""
-
-msgid "AuditStreams|Add a custom value"
-msgstr ""
-
 msgid "AuditStreams|Add an HTTP endpoint to manage audit logs in third-party systems."
 msgstr ""
 
@@ -6585,6 +6579,12 @@ msgid "AuditStreams|Verification token for the %{link} stream"
 msgstr ""
 
 msgid "AuditStreams|View verification token"
+msgstr ""
+
+msgid "AuditStreams|ex: 1000"
+msgstr ""
+
+msgid "AuditStreams|ex: limitation"
 msgstr ""
 
 msgid "AuditStreams|filtered"
