Add header for scan execution policy scanner dropdown
Changelog: changed
EE: true

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -40048,6 +40048,9 @@ msgstr ""
 msgid "ScanExecutionPolicy|Schedules:"
 msgstr ""
 
+msgid "ScanExecutionPolicy|Select a scanner"
+msgstr ""
+
 msgid "ScanExecutionPolicy|Select agent"
 msgstr ""
 
