Add MR throughput to value streams dashboard
Adds the MR throughput values to the values stream
dashboard, showing a count of the merged MRs in the
given time periods.

Add constants for the MR throughput metrics

render count in table

Changelog: added
EE: true

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -13794,6 +13794,9 @@ msgstr ""
 msgid "DORA4Metrics|Median time an incident was open in a production environment over the given time period."
 msgstr ""
 
+msgid "DORA4Metrics|Merge request throughput"
+msgstr ""
+
 msgid "DORA4Metrics|Metrics comparison for %{name} group"
 msgstr ""
 
@@ -49698,6 +49701,9 @@ msgid "ValueStreamAnalytics|Shows %{selectedSubjectFilterText} for group '%{grou
 msgstr ""
 
 msgid "ValueStreamAnalytics|Tasks by type"
+msgstr ""
+
+msgid "ValueStreamAnalytics|The number of merge requests merged by month."
 msgstr ""
 
 msgid "ValueStreamAnalytics|The time it takes an organization to recover from a failure in production."
