--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -900,7 +900,7 @@ msgstr ""
 msgid "%{milliseconds}ms"
 msgstr ""
 
-msgid "%{minutesUsed} minutes"
+msgid "%{minutesUsed} units"
 msgstr ""
 
 msgid "%{model_name} not found"
@@ -2891,9 +2891,6 @@ msgstr ""
 msgid "Additional diagram formats"
 msgstr ""
 
-msgid "Additional minutes"
-msgstr ""
-
 msgid "Additional minutes:"
 msgstr ""
 
@@ -2910,6 +2907,9 @@ msgid "Additional text to show on the Help page"
 msgstr ""
 
 msgid "Additional text to show on the sign-in page"
+msgstr ""
+
+msgid "Additional units"
 msgstr ""
 
 msgid "Address"
@@ -8534,9 +8534,6 @@ msgid "CI/CD configuration file"
 msgstr ""
 
 msgid "CI/CD limits"
-msgstr ""
-
-msgid "CI/CD minutes"
 msgstr ""
 
 msgid "CI/CD|No projects have been added to the scope"
@@ -48273,6 +48270,9 @@ msgstr ""
 msgid "Unhappy?"
 msgstr ""
 
+msgid "Units of compute"
+msgstr ""
+
 msgid "Units|d"
 msgstr ""
 
@@ -48636,25 +48636,25 @@ msgstr ""
 msgid "UsageQuota|Audio samples, videos, datasets, and graphics."
 msgstr ""
 
-msgid "UsageQuota|Buy additional minutes"
+msgid "UsageQuota|Buy additional units of compute"
 msgstr ""
 
 msgid "UsageQuota|Buy storage"
 msgstr ""
 
-msgid "UsageQuota|CI minutes usage by month"
-msgstr ""
-
-msgid "UsageQuota|CI minutes usage by project"
-msgstr ""
-
-msgid "UsageQuota|CI/CD minutes usage"
-msgstr ""
-
-msgid "UsageQuota|CI/CD minutes usage since %{usageSince}"
-msgstr ""
-
 msgid "UsageQuota|Code packages and container images."
+msgstr ""
+
+msgid "UsageQuota|Compute usage"
+msgstr ""
+
+msgid "UsageQuota|Compute usage by month"
+msgstr ""
+
+msgid "UsageQuota|Compute usage by project"
+msgstr ""
+
+msgid "UsageQuota|Compute usage since %{usageSince}"
 msgstr ""
 
 msgid "UsageQuota|Container Registry"
@@ -48711,7 +48711,7 @@ msgstr ""
 msgid "UsageQuota|Namespace storage used"
 msgstr ""
 
-msgid "UsageQuota|No CI minutes usage data available."
+msgid "UsageQuota|No compute usage data available."
 msgstr ""
 
 msgid "UsageQuota|No projects to display."
@@ -48792,7 +48792,7 @@ msgstr ""
 msgid "UsageQuota|This namespace has no projects which used shared runners in the current period"
 msgstr ""
 
-msgid "UsageQuota|This table omits projects that used 0 CI/CD minutes or 0 shared runners duration"
+msgid "UsageQuota|This table omits projects that used 0 units of compute or 0 shared runners duration"
 msgstr ""
 
 msgid "UsageQuota|Transfer"
