--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -8239,6 +8239,9 @@ msgstr ""
 msgid "BroadcastMessages|Ends at"
 msgstr ""
 
+msgid "BroadcastMessages|Git remote responses"
+msgstr ""
+
 msgid "BroadcastMessages|Green"
 msgstr ""
 
@@ -8270,6 +8273,9 @@ msgid "BroadcastMessages|Paths can contain wildcards, like */welcome"
 msgstr ""
 
 msgid "BroadcastMessages|Red"
+msgstr ""
+
+msgid "BroadcastMessages|Show the broadcast message in a command-line interface as a Git remote response"
 msgstr ""
 
 msgid "BroadcastMessages|Starts at"
