--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -35875,6 +35875,9 @@ msgstr ""
 msgid "ProjectSettings|Merging is only allowed when the source branch is up-to-date with its target."
 msgstr ""
 
+msgid "ProjectSettings|Model experiments"
+msgstr ""
+
 msgid "ProjectSettings|Monitor"
 msgstr ""
 
@@ -36056,6 +36059,9 @@ msgid "ProjectSettings|Topics"
 msgstr ""
 
 msgid "ProjectSettings|Topics are publicly visible even on private projects. Do not include sensitive information in topic names. %{linkStart}Learn more%{linkEnd}."
+msgstr ""
+
+msgid "ProjectSettings|Track machine learning model experiments and artifacts."
 msgstr ""
 
 msgid "ProjectSettings|Transfer project"
