--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -2921,9 +2921,6 @@ msgstr ""
 msgid "Additional diagram formats"
 msgstr ""
 
-msgid "Additional minutes:"
-msgstr ""
-
 msgid "Additional text"
 msgstr ""
 
@@ -2940,6 +2937,9 @@ msgid "Additional text to show on the sign-in page"
 msgstr ""
 
 msgid "Additional units"
+msgstr ""
+
+msgid "Additional units of compute:"
 msgstr ""
 
 msgid "Address"
@@ -11672,6 +11672,9 @@ msgid "Components must have a 'name'"
 msgstr ""
 
 msgid "Compute quota"
+msgstr ""
+
+msgid "Compute quota:"
 msgstr ""
 
 msgid "Confidence"
@@ -34440,10 +34443,10 @@ msgstr ""
 msgid "Private profile:"
 msgstr ""
 
-msgid "Private projects Minutes cost factor"
+msgid "Private projects can be created in your personal namespace with:"
 msgstr ""
 
-msgid "Private projects can be created in your personal namespace with:"
+msgid "Private projects compute cost factor"
 msgstr ""
 
 msgid "Problem with %{name} command: %{message}."
@@ -37120,10 +37123,10 @@ msgstr ""
 msgid "Public pipelines"
 msgstr ""
 
-msgid "Public projects Minutes cost factor"
+msgid "Public projects are an easy way to allow everyone to have read-only access."
 msgstr ""
 
-msgid "Public projects are an easy way to allow everyone to have read-only access."
+msgid "Public projects compute cost factor"
 msgstr ""
 
 msgid "Publish to status page"
@@ -37364,9 +37367,6 @@ msgid "Quick help"
 msgstr ""
 
 msgid "Quick range"
-msgstr ""
-
-msgid "Quota of CI/CD minutes:"
 msgstr ""
 
 msgid "README"
