--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -11210,6 +11210,9 @@ msgstr ""
 msgid "Comment on lines %{startLine} to %{endLine}"
 msgstr ""
 
+msgid "Comment on this file"
+msgstr ""
+
 msgid "Comment template actions"
 msgstr ""
 
@@ -28504,6 +28507,12 @@ msgid "MergeRequests|commented on commit %{commitLink}"
 msgstr ""
 
 msgid "MergeRequests|started a thread"
+msgstr ""
+
+msgid "MergeRequests|started a thread on %{linkStart}a file%{linkEnd}"
+msgstr ""
+
+msgid "MergeRequests|started a thread on %{linkStart}an old version of a file%{linkEnd}"
 msgstr ""
 
 msgid "MergeRequests|started a thread on %{linkStart}an old version of the diff%{linkEnd}"
