--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -9697,6 +9697,9 @@ msgstr ""
 msgid "CiVariables|Expanded"
 msgstr ""
 
+msgid "CiVariables|Group"
+msgstr ""
+
 msgid "CiVariables|Input variable key"
 msgstr ""
 
@@ -9707,6 +9710,9 @@ msgid "CiVariables|Key"
 msgstr ""
 
 msgid "CiVariables|Masked"
+msgstr ""
+
+msgid "CiVariables|Maximum number of Inherited Group CI variables loaded (2000)"
 msgstr ""
 
 msgid "CiVariables|Maximum number of variables reached."
@@ -9740,6 +9746,9 @@ msgid "CiVariables|Specify variable values to be used in this run. The variables
 msgstr ""
 
 msgid "CiVariables|State"
+msgstr ""
+
+msgid "CiVariables|There was an error fetching the inherited CI variables."
 msgstr ""
 
 msgid "CiVariables|This %{entity} has %{currentVariableCount} defined CI/CD variables. The maximum number of variables per %{entity} is %{maxVariableLimit}. To add new variables, you must reduce the number of defined variables."
