--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -12268,6 +12268,9 @@ msgstr ""
 msgid "Containers"
 msgstr ""
 
+msgid "Contains only whitespace changes."
+msgstr ""
+
 msgid "Content"
 msgstr ""
 
@@ -42316,6 +42319,9 @@ msgid "Show archived projects"
 msgstr ""
 
 msgid "Show archived projects only"
+msgstr ""
+
+msgid "Show changes"
 msgstr ""
 
 msgid "Show closed epics"
