Display errors in UI correctly with creating notes
- When there is a validation error when adding
a new note or replying to a discussion, display the
error message on top of the note in question, instead
of at the top of the viewing window
- Remove the placeholder note and return context
to the note-form

Changelog: fixed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -52743,7 +52743,7 @@ msgstr ""
 msgid "Your changes have been successfully committed."
 msgstr ""
 
-msgid "Your comment could not be submitted because %{error}"
+msgid "Your comment could not be submitted because %{reason}."
 msgstr ""
 
 msgid "Your comment could not be submitted! Please check your network connection and try again."
