--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -11464,6 +11464,9 @@ msgstr ""
 msgid "Compliance Report|Frameworks"
 msgstr ""
 
+msgid "Compliance Report|Standards Adherence"
+msgstr ""
+
 msgid "Compliance Report|Violations"
 msgstr ""
 
