Add json parser tool to be used by zero shot agent
This tool is to help achat agent with information on attributes
of a resource.

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -48471,6 +48471,9 @@ msgstr ""
 msgid "Unexpected error"
 msgstr ""
 
+msgid "Unexpected error: Cannot serialize resource"
+msgstr ""
+
 msgid "Unexpected scope"
 msgstr ""
 
