Update "New Group Name" to "New group name" on trial form
Changelog: changed
MR: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/123074
EE: true

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -30043,9 +30043,6 @@ msgstr ""
 msgid "New Group"
 msgstr ""
 
-msgid "New Group Name"
-msgstr ""
-
 msgid "New Identity"
 msgstr ""
 
@@ -30130,6 +30127,9 @@ msgid "New file"
 msgstr ""
 
 msgid "New group"
+msgstr ""
+
+msgid "New group name"
 msgstr ""
 
 msgid "New health check access token has been generated!"
