Add 24h timeline graph to error tracking UI
- Created new TimelineChart component
- Added chart to error list and details view

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -26516,6 +26516,9 @@ msgstr ""
 msgid "Last 2 weeks"
 msgstr ""
 
+msgid "Last 24 hours"
+msgstr ""
+
 msgid "Last Accessed On"
 msgstr ""
 
@@ -47400,6 +47403,9 @@ msgid "Timeago|just now"
 msgstr ""
 
 msgid "Timeago|right now"
+msgstr ""
+
+msgid "Timeline"
 msgstr ""
 
 msgid "Timeline event added successfully."
