--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -52750,10 +52750,10 @@ msgstr ""
 msgid "Your %{plan} plan will be applied to your group."
 msgstr ""
 
-msgid "Your %{spammable_entity_type} has been recognized as spam and has been discarded."
+msgid "Your %{spammable_entity_type} has been recognized as spam. Please, change the content or solve the reCAPTCHA to proceed."
 msgstr ""
 
-msgid "Your %{spammable_entity_type} has been recognized as spam. Please, change the content or solve the reCAPTCHA to proceed."
+msgid "Your %{spammable_entity_type} has been recognized as spam. Please, change the content to proceed."
 msgstr ""
 
 msgid "Your %{strong}%{plan_name}%{strong_close} subscription for %{strong}%{namespace_name}%{strong_close} will expire on %{strong}%{expires_on}%{strong_close}."
@@ -55139,6 +55139,9 @@ msgid "sign in"
 msgstr ""
 
 msgid "smartcn custom analyzer"
+msgstr ""
+
+msgid "snippet"
 msgstr ""
 
 msgid "source"
