--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -39343,6 +39343,9 @@ msgstr ""
 msgid "Runners|An error has occurred fetching instructions"
 msgstr ""
 
+msgid "Runners|An error occurred while creating the runner. Please try again."
+msgstr ""
+
 msgid "Runners|An error occurred while deleting. Some runners may not have been deleted."
 msgstr ""
 
