--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -54737,6 +54737,9 @@ msgstr ""
 msgid "mrWidget|What is a merge train?"
 msgstr ""
 
+msgid "mrWidget|Your merge request is almost ready!"
+msgstr ""
+
 msgid "mrWidget|Your password"
 msgstr ""
 
